@@ -1,3 +1,8 @@
+2004-05-29 [christoph]
+
+	* src/plugin_gtk.c
+		unregister FolderView-PopUp when unloading GTK plugin
+
 2004-05-27 [christoph]
 
 	Release Maildir Plugin 0.5
